package util;

import app.Exercises;

import java.util.List;

public class ExercisesMapper {
    Exercises ex;


    public ExercisesMapper() {
    }

    public List<Exercises> loadExercisesData() {
        return null;
    }

    public List<Exercises> saveExercisesData() {
        return null;
    }

    /*public int loadExerciseRepsData(int setNr) {
        int reps = rs.getInt("Set" + setNr);
        return reps;
    }

    public float loadExerciseKgData(int setNr) {
        int Kg = rs.getInt("Set" + setNr);
        return Kg;
    }*/

}